--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark"> 
+<!-- <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark"> 
     <div class="container"> 
         <a class="navbar-brand" href="#">Theatre</a> 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,20 +26,6 @@
                 </div>
             </div>
 
-            <form *ngIf="!(accountService.currentUser$|async)" #loginForm="ngForm" class="d-flex" (ngSubmit)="login()" autocomplete="off"> 
-                <input name="username"
-                [(ngModel)]="model.username"
-                 class="form-control me-2" 
-                 type="text" 
-                 placeholder="UserName"> 
-                <input 
-                name="password"
-                [(ngModel)]="model.password"
-                class="form-control me-2" 
-                type="password" 
-                placeholder="Password"> 
-                <button class="btn btn-outline-success" type="submit">Login</button> 
-            </form> 
         </div> 
     </div> 
-</nav>
+</nav> -->
