--- a/client/src/app/theatre-page/plays/plays.component.html
+++ b/client/src/app/theatre-page/plays/plays.component.html
@@ -17,7 +17,7 @@
             Description: <strong>{{ item.description }}</strong>
           </p>
           <p class="card-text">
-            Type: <strong>{{ item.type }}</strong>
+            Type: <strong>{{ item.type.name }}</strong>
           </p>
           <button
             class="btn btn-danger float-right"
