--- a/client/src/app/theatre-page/add-event/add-event.component.html
+++ b/client/src/app/theatre-page/add-event/add-event.component.html
@@ -29,6 +29,23 @@
             </div>
           </div>
           <div class="mb-3">
+            <input
+              type="number"
+              class="form-control"
+              formControlName="price"
+              placeholder="Price"
+            />
+            <div
+              *ngIf="
+                datetimeForm.controls['price'].invalid &&
+                datetimeForm.controls['price'].touched
+              "
+              class="text-danger"
+            >
+              Price is required
+            </div>
+          </div>
+          <div class="mb-3">
             <label for="dropdown" class="form-label">Play</label>
             <select class="form-select" id="dropdown" formControlName="play">
               <option *ngFor="let option of plays" [value]="option.id">
