--- a/client/src/app/client-page/client-events/client-events.component.html
+++ b/client/src/app/client-page/client-events/client-events.component.html
@@ -2,7 +2,12 @@
 <app-client-navbar></app-client-navbar>
 <div class="container main-container">
   <div class="row">
-    <div class="col-sm-4 mb-5" *ngFor="let item of events">
+    <div class="col-sm-4 mb-5" *ngFor="let item of events 
+    | paginate :{
+      itemsPerPage:tableSize,
+      currentPage:page,
+      totalItems:count
+    }; let i = index">
       <div class="card h-100">
         <div class="card-img-wrapper d-flex justify-content-center align-items-center">
           <img [src]="getImageUrl(item.play)" class="card-img card-img-top image-scale img-card" alt="...">
@@ -18,14 +23,19 @@
           <p class="card-text">
             Date: <strong>{{ item.datetime }}</strong>
           </p>
-          <p class="card-text">
-            Price: <strong>{{ item.price }} $</strong>
-          </p>
           <button class="btn btn-primary" *ngIf="isLoggedIn$ | async">Buy ticket</button>
           <button class="btn btn-danger" *ngIf="!(isLoggedIn$ | async)" disabled >Login for buying tickets
           </button>
         </div>
       </div>
     </div>
+  </div>
+  <div class="d-flex justify-content-center">
+    <pagination-controls
+      previousLabel="Prev"
+      nextLabel="Next"
+      (pageChange)="onTableDataChange($event)"
+    >
+    </pagination-controls>
   </div>
 </div>
