--- a/client/src/app/client-page/client-events/client-events.component.html
+++ b/client/src/app/client-page/client-events/client-events.component.html
@@ -1,5 +1,46 @@
 
 <app-client-navbar></app-client-navbar>
+<div class="text-center mt-3">
+  <h2>Your result - {{events.length}}</h2>
+</div>
+
+<div class="col-md-6">
+  <form
+    [formGroup]="filterForm"
+    (ngSubmit)="getFilteredEvents()"
+    autocomplete="off"
+  >
+    <div class="mb-3">
+      <select formControlName="city" name="city">
+          <option value="">City</option>
+          <option *ngFor="let city of cities$ | async" [ngValue]="city">{{ city}}</option>
+        </select>
+    </div>
+    <div class="mb-3">
+      <input
+        type="text"
+        class="form-control"
+        formControlName="name"
+        placeholder="name"
+      />
+    </div>
+    <div class="text-center mt-2">
+      <button
+        class="btn btn-success me-2"
+        type="submit"
+        
+      >
+        Search
+      </button>
+      <a class="btn btn-danger" href="home/events" type="button">
+        Reset filters
+      </a>
+    </div>
+  </form>
+</div>
+
+
+<a class="btn btn-success" (click)="getFilteredEvents()">Logout</a>
 <div class="container main-container">
   <div class="row">
     <div class="col-sm-4 mb-5" *ngFor="let item of events 
