--- a/client/src/app/client-page/client-navbar/client-navbar.component.html
+++ b/client/src/app/client-page/client-navbar/client-navbar.component.html
@@ -24,10 +24,10 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
-          <li *ngIf="isLoggedIn$ | async">
+          <li class="nav-item" *ngIf="isLoggedIn$ | async">
             <a class="nav-link" (click)="logout()">Logout</a>
           </li>
-          <li *ngIf="!(isLoggedIn$ | async)">
+          <li class="nav-item" *ngIf="!(isLoggedIn$ | async)">
             <a class="nav-link" href="auth/Login">Login</a>
           </li>
         </ul>
