Added filtering by name, city, price and each one separately

--- a/client/src/app/client-page/client-events/client-events.component.html
+++ b/client/src/app/client-page/client-events/client-events.component.html
@@ -63,7 +63,7 @@
             Available Seats: <strong>{{ item.availableSeats }}</strong>
           </p>
           <p class="card-text">
-            Date: <strong>{{ item.datetime }}</strong>
+            Date: <strong>{{ item.date }}</strong>
           </p>
           <p class="card-text">
             Price: <strong>{{ item.price }}</strong>
