--- a/client/src/app/client-page/client-theatres/client-theatres.component.html
+++ b/client/src/app/client-page/client-theatres/client-theatres.component.html
@@ -1,13 +1,18 @@
 <app-client-navbar></app-client-navbar>
-<div class="container main-container d-flex justify-content-center">
+<div class="container main-container">
   <div class="row" *ngIf="theatreClicked == false">
-    <div class="col-sm-5 margin-bot" *ngFor="let item of theatres">
-      <div class="card main-card" (click)="onCardClick(item)">
-        <img
-          [src]="getImageUrl(item.image)"
-          class="card-img card-img-top image-scale"
-          alt="..."
-        />
+    <div class="text-center">
+      <h3>We found {{theatres.length}} results based on your search</h3>
+    </div>
+    <div class="col-sm-4 mb-5" *ngFor="let item of theatres| paginate :{
+      itemsPerPage:tableSize,
+      currentPage:page,
+      totalItems:count
+    }; let i = index">
+      <div class="card h-100" style="background-color: bisque;" (click)="onCardClick(item)">
+        <div class="card-img-wrapper d-flex justify-content-center align-items-center">
+          <img [src]="getImageUrl(item.image)" class="card-img card-img-top image-scale img-card" alt="...">
+        </div>
         <div class="card-body">
           <h2 class="card-title">{{ item.user.username }}</h2>
           <p class="card-text">
@@ -23,38 +28,68 @@
         </div>
       </div>
     </div>
+    <div class="d-flex justify-content-center">
+      <pagination-controls
+        previousLabel="Prev"
+        nextLabel="Next"
+        (pageChange)="onTableDataChange($event)"
+      >
+      </pagination-controls>
+    </div>
   </div>
+
+
+  
+
   <div class="container" *ngIf="theatreClicked == true">
     <div class="text-center">
-      <button class="btn btn-primary" (click)="onButtonClick()">
-        See all theatres
-      </button>
     </div>
+
     <div class="row">
-      <div class="col-sm-4 margin-bot" *ngFor="let item of currentEvents">
-        <div class="card main-card">
-          <img
-            [src]="getImageUrl(item.play.image)"
-            class="card-img card-img-top image-scale"
-            alt="..."
-          />
+      <div class="col-sm-4 mb-5" *ngFor="let item of currentEvents 
+      | paginate :{
+        itemsPerPage:tableSize,
+        currentPage:page,
+        totalItems:count
+      }; let i = index">
+        <div class="card h-100" style="background-color: bisque;">
+          <h2 class="card-title text-center">{{ item.play.name }}</h2>
+          <div class="card-img-wrapper d-flex justify-content-center align-items-center">
+            <img [src]="getImageUrl(item.play.image)" class="card-img card-img-top image-scale img-card" alt="...">
+          </div>
           <div class="card-body">
-            <h2 class="card-title">{{ item.play.name }}</h2>
+            
             <p class="card-text">
-              theatre: <strong>{{ item.theatreName }}</strong>
+              <fa-icon [icon]="faCalendar" style="margin-right:0.5em;"></fa-icon><strong>{{ getDate(item.datetime) }} 
+                <strong>{{ getTime(item.datetime) }}</strong></strong>
             </p>
             <p class="card-text">
-              Seats: <strong>{{ item.availableSeats }}</strong>
+              <strong>{{ item.theatreName }}</strong>
             </p>
             <p class="card-text">
-              Date: <strong>{{ item.datetime }}</strong>
+              Available Seats: <strong>{{ item.availableSeats }}</strong>
             </p>
+            
             <p class="card-text">
-              Description: <strong>{{ item.play.description }}</strong>
+              Price: <strong>{{ item.price }}</strong> $
             </p>
+            <button class="btn btn-secondary" *ngIf="isLoggedIn$ | async">Buy ticket</button>
+            <button class="btn btn-danger" *ngIf="!(isLoggedIn$ | async)" disabled >Login for buying tickets
+            </button>
           </div>
         </div>
       </div>
     </div>
+
+
+    <div class="d-flex justify-content-center">
+      <pagination-controls
+        previousLabel="Prev"
+        nextLabel="Next"
+        (pageChange)="onTableDataChange($event)"
+      >
+      </pagination-controls>
+    </div>
   </div>
+  
 </div>
