--- a/client/src/app/login-page/login-navbar/login-navbar.component.html
+++ b/client/src/app/login-page/login-navbar/login-navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
     <div class="container-fluid">
       <a class="navbar-brand" href="/home">Client page</a>
       <ul class="navbar-nav ms-auto">
