--- a/client/src/app/login-page/register-theatre/register-theatre.component.html
+++ b/client/src/app/login-page/register-theatre/register-theatre.component.html
@@ -1,3 +1,4 @@
+<app-login-navbar></app-login-navbar>
 <div class="container full-height">
     <div class="row justify-content-center align-items-center">
       <div class="col-md-6">
