--- a/client/src/app/client-page/client-events/client-events.component.html
+++ b/client/src/app/client-page/client-events/client-events.component.html
@@ -1,4 +1,4 @@
-
+<div #topOfPage></div>
 <app-client-navbar></app-client-navbar>
 <div class="text-center mt-3">
   <h3>We found {{events?.length}} results based on your search</h3>
