Added image validation on add play component

--- a/client/src/app/login-page/login/login.component.html
+++ b/client/src/app/login-page/login/login.component.html
@@ -27,10 +27,18 @@
       </div>
       <div class="container d-flex justify-content-center align-items-center mt-3">
         <div class="d-flex justify-content-center">
-          <button class="btn btn-primary me-2" routerLink="/auth/register-theatre">Register as theatre</button>
-          <button class="btn btn-primary me-2" routerLink="/auth/register">Register as user</button>
+          Don't have an account?
+          <br>
+          Don't worry, create one now clicking on "register"
+          <br>
+          
+
         </div>
+        
       </div>
+      <div class="d-flex justify-content-end">
+      <a href="/auth/register" style="flex:right">Register</a>
+    </div>
     </div>  
   </div>
   
