--- a/client/src/app/theatre-page/add-event/add-event.component.html
+++ b/client/src/app/theatre-page/add-event/add-event.component.html
@@ -1,3 +1,4 @@
+<app-theatre-navbar></app-theatre-navbar>
 <div class="container full-height" >
     <div class="row justify-content-center align-items-center">
       <div class="col-md-6">
