--- a/client/src/app/theatre-page/plays/plays.component.html
+++ b/client/src/app/theatre-page/plays/plays.component.html
@@ -1,19 +1,39 @@
+<div #topOfPage></div>
 <app-theatre-navbar></app-theatre-navbar>
 <div class="d-flex justify-content-center align-items-center">
   <a class="btn btn-primary" href="/theatre/play/add">Add play</a>
 </div>
 <div class="container main-container">
   <div class="row">
-    <div class="col-sm-4 mb-3" *ngFor="let item of plays">
-      <div class="card h-100">
-        <img [src]="getImageUrl(item)" class="card-img-top h-50" alt="...">
+    <div class="col-sm-4 mb-5" *ngFor="let item of plays 
+    | paginate :{
+      itemsPerPage:tableSize,
+      currentPage:page,
+      totalItems:count
+    }; let i = index">
+      <div class="card h-100" style="background-color: bisque;">
+        <div class="card-img-wrapper d-flex justify-content-center align-items-center">
+          <img [src]="getImageUrl(item)" class="card-img card-img-top image-scale img-card" alt="...">
+        </div>
         <div class="card-body">
           <h2 class="card-title">{{ item.name }}</h2>
-          <p class="card-text">Description: <strong>{{ item.description }}</strong></p>
           <p class="card-text">Type: <strong>{{ item.type.name }}</strong></p>
           <button class="btn btn-danger float-right" (click)="deletePlay(item.id)">Delete</button>
         </div>
       </div>
     </div>
   </div>
+  <div class="d-flex justify-content-center">
+    <pagination-controls
+      previousLabel="Prev"
+      nextLabel="Next"
+      (pageChange)="onTableDataChange($event)"
+    >
+    </pagination-controls>
+  </div>
 </div>
+
+
+
+
+
