--- a/client/src/app/theatre-page/schedule/schedule.component.html
+++ b/client/src/app/theatre-page/schedule/schedule.component.html
@@ -1,3 +1,4 @@
+<div #topOfPage></div>
 <app-theatre-navbar></app-theatre-navbar>
 <div class="d-flex justify-content-center align-items-center">
   <a class="btn btn-primary" href="/theatre/schedule/add">Add Event</a>
@@ -24,7 +25,12 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let event of events">
+      <tr *ngFor="let event of events 
+      | paginate :{
+        itemsPerPage:tableSize,
+        currentPage:page,
+        totalItems:count
+      }; let i = index">
         <td>{{ event.play.name }}</td>
         <td>{{ event.availableSeats }}</td>
         <td>{{ event.datetime | date : "medium" }}</td>
@@ -36,4 +42,12 @@
       </tr>
     </tbody>
   </table>
+  <div class="d-flex justify-content-center">
+    <pagination-controls
+      previousLabel="Prev"
+      nextLabel="Next"
+      (pageChange)="onTableDataChange($event)"
+    >
+    </pagination-controls>
+  </div>
 </div>
