Added edit/add dialog for schedule

--- a/client/src/app/client-page/client-events/client-events.component.html
+++ b/client/src/app/client-page/client-events/client-events.component.html
@@ -1,4 +1,4 @@
-<div #topOfPage></div>
+<div #topOfPage style="background-color:darkgray">
 <app-client-navbar></app-client-navbar>
 <div class="text-center mt-3">
   <h3>We found {{events?.length}} results based on your search</h3>
@@ -86,4 +86,5 @@
     >
     </pagination-controls>
   </div>
+</div>
 </div>
