--- a/client/src/app/theatre-page/add-event/add-event.component.html
+++ b/client/src/app/theatre-page/add-event/add-event.component.html
@@ -1,7 +1,6 @@
-<app-theatre-navbar></app-theatre-navbar>
-<div class="container full-height" >
-    <div class="row justify-content-center align-items-center">
-      <div class="col-md-6">
+<div class="container full-height main-div">
+  <div class="row justify-content-center align-items-center">
+      <div>
         <form [formGroup]="datetimeForm" (ngSubmit)="onSubmit()" novalidate>
           <h2 class="text-center text-primary">Add event</h2>
           <hr />
@@ -49,18 +48,18 @@
           <div class="mb-3">
             <label for="dropdown" class="form-label">Play</label>
             <select class="form-select" id="dropdown" formControlName="play">
-              <option *ngFor="let option of plays" [value]="option.id">
-                {{ option.name }}
-              </option>
+              <option value="" disabled selected hidden >Select an event </option>
+              <option *ngFor="let option of plays" [ngValue]="option.id">{{ option.name }}</option>
             </select>
           </div>
+          
           <div class="text-center">
             <button
               type="submit"
               class="btn btn-success me-2"
               [disabled]="datetimeForm.invalid"
             >
-              Submit
+            {{data? 'Update':'Save'}}              
             </button>
             <button type="button" class="btn btn-danger" (click)="cancel()">
               Cancel
@@ -70,4 +69,9 @@
       </div>
     </div>
   </div>
+
+
+
+
+
   
