--- a/client/src/app/theatre-page/plays/plays.component.html
+++ b/client/src/app/theatre-page/plays/plays.component.html
@@ -1,8 +1,7 @@
 <div #topOfPage></div>
 <app-theatre-navbar></app-theatre-navbar>
-<div class="d-flex justify-content-center align-items-center">
-  <a class="btn btn-primary" href="/theatre/play/add">Add play</a>
-  <button mat raised-button (click)="openAddEditPlayForm()">Add play</button>
+<div class="d-flex justify-content-center align-items-center add-div">
+  <button mat raised-button class="btn btn-primary" (click)="openAddEditPlayForm()">Add play</button>
 </div>
 <div class="container main-container">
   <div class="row">
