--- a/client/src/app/theatre-page/schedule/schedule.component.html
+++ b/client/src/app/theatre-page/schedule/schedule.component.html
@@ -1,53 +1,62 @@
 <div #topOfPage></div>
 <app-theatre-navbar></app-theatre-navbar>
-<div class="d-flex justify-content-center align-items-center">
-  <a class="btn btn-primary" href="/theatre/schedule/add">Add Event</a>
+<div class="d-flex justify-content-center align-items-center add-event">
+  <button mat raised-button class="btn btn-primary" (click)="openAddEditEventForm()">Add play</button>
 </div>
 
-<div *ngIf="events.length === 0" class="alert alert-info mt-3" role="alert">
-  There are no events to display.
-</div>
-
-<div *ngIf="events.length > 0">
-  <table class="table table-hover mt-3">
-    <colgroup>
-      <col class="col-md-4" />
-      <col class="col-md-3" />
-      <col class="col-md-3" />
-      <col class="col-md-1" />
-    </colgroup>
-    <thead class="thead-dark">
-      <tr>
-        <th scope="col">Play Name</th>
-        <th scope="col">Available Seats</th>
-        <th scope="col">Datetime</th>
-        <th scope="col">Actions</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let event of events 
-      | paginate :{
-        itemsPerPage:tableSize,
-        currentPage:page,
-        totalItems:count
-      }; let i = index">
-        <td>{{ event.play.name }}</td>
-        <td>{{ event.availableSeats }}</td>
-        <td>{{ event.datetime | date : "medium" }}</td>
-        <td>
-          <button class="btn btn-danger" (click)="deleteEvent(event.id)">
-            Delete
+<div class="main-body">
+  <mat-form-field>
+    <mat-label>Filter</mat-label>
+    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Play" #input>
+  </mat-form-field>
+  
+  <div class="mat-elevation-z8">
+    <table mat-table [dataSource]="dataSource" matSort>
+  
+  
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+        <td mat-cell *matCellDef="let row"> {{row.play.name}} </td>
+      </ng-container>
+  
+      <ng-container matColumnDef="availableSeats">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> availableSeats </th>
+        <td mat-cell *matCellDef="let row"> {{row.availableSeats}} </td>
+      </ng-container>
+  
+      <ng-container matColumnDef="datetime">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Datetime </th>
+        <td mat-cell *matCellDef="let row"> {{row.datetime|date}} </td>
+      </ng-container>
+      <ng-container matColumnDef="price">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Price </th>
+        <td mat-cell *matCellDef="let row"> {{row.price|currency}} </td>
+      </ng-container>
+      <ng-container matColumnDef="action">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Action </th>
+        <td mat-cell *matCellDef="let row"> 
+          <button mat-icon-button color="primary" (click)="openEditEventForm(row)">
+            <mat-icon>
+              edit
+            </mat-icon>
           </button>
-        </td>
+          <button mat-icon-button color="warn" (click)="deleteEvent(row.id)">
+            <mat-icon>
+              delete
+            </mat-icon>
+          </button>
+           </td>
+      </ng-container>
+      
+  
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  
+      <tr class="mat-row" *matNoDataRow>
+        <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
       </tr>
-    </tbody>
-  </table>
-  <div class="d-flex justify-content-center">
-    <pagination-controls
-      previousLabel="Prev"
-      nextLabel="Next"
-      (pageChange)="onTableDataChange($event)"
-    >
-    </pagination-controls>
+    </table>
+  
+    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
   </div>
 </div>
