Added error messages for register and login

--- a/client/src/app/client-page/client-navbar/client-navbar.component.html
+++ b/client/src/app/client-page/client-navbar/client-navbar.component.html
@@ -1,8 +1,10 @@
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="/home">Client page</a>
-      <ul class="navbar-nav ms-auto">
+
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+    <div class="container-fluid justify-content-space-between">
+      <a class="navbar-brand" href="/home">Gathered<span class="nav-brand-title">Events</span></a>
+     
+      <ul class="navbar-nav mx-auto">
         <li class="nav-item">
           <a class="nav-link" href="home/events">Events</a>
         </li>
@@ -10,19 +12,9 @@
           <a class="nav-link" href="home/theatres">Theatres</a>
         </li>
        </ul>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#navbarNav"
-        aria-controls="navbarNav"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-      
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
+    
+  
+      <div>
         <ul class="navbar-nav ms-auto">
           <li class="nav-item" *ngIf="isLoggedIn$ | async" style="cursor:pointer">
             <a class="nav-link" (click)="logout()">Logout</a>
@@ -34,3 +26,5 @@
       </div>
     </div>
   </nav>
+  
+ 
