--- a/client/src/app/client-page/client-events/client-events.component.html
+++ b/client/src/app/client-page/client-events/client-events.component.html
@@ -5,35 +5,41 @@
 </div>
 
 <div class="row justify-content-center" >
-  <div class="col-md-5 border rounded border-dark p-4">
+  <div class="col-md-6">
   <form class="form-inline" [formGroup]="filterForm" (ngSubmit)="getFilteredEvents()" autocomplete="off">
     <div class="row">
       <div class="col-md-3">
         <div class="mb-3">
           <select formControlName="city" name="city" (change)="getFilteredEvents()" class="form-control">
-            <option value="">City</option>
+            <option value="" disabled selected hidden >Select a city </option>
             <option *ngFor="let city of cities$ | async" [ngValue]="city">{{ city }}</option>
           </select>
         </div>
       </div>
-      <div class="col-md-3">
+      <div class="col-md-2">
         <div class="mb-3">
           <input type="text" class="form-control" formControlName="name" placeholder="Name" (input)="getFilteredEvents()"/>
         </div>
       </div>
-      <div class="col-md-3">
+      <div class="col-md-2">
         <div class="mb-3">
-          <input type="number" class="form-control" formControlName="priceFrom" placeholder="0" (input)="getFilteredEvents()"/>
+          <input type="number" class="form-control" formControlName="priceFrom" (input)="getFilteredEvents()"/>
         </div>
       </div>
-      <div class="col-md-3">
+      <div class="col-md-2">
         <div class="mb-3">
-          <input type="number" class="form-control" formControlName="priceTo" placeholder="999" (input)="getFilteredEvents()"/>
+          <input type="number" class="form-control" formControlName="priceTo"  (input)="getFilteredEvents()"/>
         </div>
       </div>
-      <div class="col-md-12 text-center">
-        <button class="btn btn-secondary me-2" type="submit">Search</button>
-        <a class="btn btn-secondary" href="home/events" type="button">Reset filters</a>
+      <div class="col-md-1">
+        <div class="mb-3">
+          <button class="btn btn-secondary me-2" type="submit"><i class="fa fa-search"></i></button>
+        </div>
+      </div>
+      <div class="col-md-2">
+        <div class="mb-3">
+          <a class="btn btn-secondary" href="home/events" type="button">Reset</a>
+        </div>
       </div>
     </div>
   </form>
@@ -51,13 +57,12 @@
       currentPage:page,
       totalItems:count
     }; let i = index">
-      <div class="card h-100" style="background-color: bisque;" (click)="onCardClick(item)">
-        <h2 class="card-title text-center">{{ item.play.name }}</h2>
+      <div class="card h-100" style="background-color: bisque;cursor:pointer" (click)="onCardClick(item)">
         <div class="card-img-wrapper d-flex justify-content-center align-items-center">
           <img [src]="getImageUrl(item.play)" class="card-img card-img-top image-scale img-card" alt="...">
         </div>
         <div class="card-body">
-          
+          <h1 class="card-title text-center">{{ item.play.name }}</h1>
           <p class="card-text">
             <fa-icon [icon]="faCalendar" style="margin-right:0.5em;"></fa-icon><strong>{{ getDate(item.datetime) }} 
               <strong>{{ getTime(item.datetime) }}</strong></strong>
@@ -71,10 +76,7 @@
           
           <p class="card-text">
             Price: <strong>{{ item.price }}</strong> $
-          </p>
-          <button class="btn btn-secondary" *ngIf="isLoggedIn$ | async">Buy ticket</button>
-          <button class="btn btn-danger" *ngIf="!(isLoggedIn$ | async)" disabled >Login for buying tickets
-          </button>
+          </p>          
         </div>
       </div>
     </div>
