--- a/client/src/app/login-page/register-theatre/register-theatre.component.html
+++ b/client/src/app/login-page/register-theatre/register-theatre.component.html
@@ -1,7 +1,11 @@
 <app-login-navbar></app-login-navbar>
-<div class="container full-height">
-    <div class="row justify-content-center align-items-center">
-      <div class="col-md-6">
+
+  <div class="container d-flex justify-content-center align-items-center vh-100">
+    <div>
+      <div *ngIf="registerError" class="shadow p-2 mb-3 rounded bg-danger bg-gradient">{{ registerError }}</div>
+
+      <div class="shadow p-3 mb-5 bg-body rounded main-container">
+        
         <form #registerForm="ngForm" (ngSubmit)="register()" autocomplete="off">
           <h2 class="text-center text-primary">Sign up</h2>
           <hr />
@@ -10,6 +14,7 @@
               type="text"
               class="form-control"
               name="username"
+              maxlength="20"
               [(ngModel)]="model.username"
               placeholder="Username"
               required
@@ -24,6 +29,7 @@
               type="email"
               class="form-control"
               name="email"
+              maxlength="40"
               [(ngModel)]="model.email"
               placeholder="Email"
               required
@@ -40,6 +46,7 @@
               name="password"
               [(ngModel)]="model.password"
               placeholder="Password"
+              maxlength="20"
               required
               minlength="8"
               #password="ngModel"
@@ -53,6 +60,7 @@
               type="Text"
               class="form-control"
               name="city"
+              maxlength="30"
               [(ngModel)]="model.address.city"
               placeholder="City"
               required
@@ -67,6 +75,7 @@
               type="Text"
               class="form-control"
               name="street"
+              maxlength="30"
               [(ngModel)]="model.address.street"
               placeholder="Street"
               required
@@ -81,13 +90,14 @@
               type="Number"
               class="form-control"
               name="Number"
+              max="9999"
               [(ngModel)]="model.address.number"
               placeholder="Number"
               required
               #number="ngModel"
             />
             <div *ngIf="number.invalid && number.touched" class="text-danger">
-              Number is required
+              Number is required and must be less than 9999
             </div>
           </div>
           <div class="mb-3">
@@ -97,7 +107,8 @@
               name="totalSeats"
               [(ngModel)]="model.totalSeats"
               placeholder="Total seats"
-              min="0"
+              min="1"
+              max="9999"
               required
               #totalSeats="ngModel"
             />
@@ -105,7 +116,7 @@
               *ngIf="totalSeats.invalid && totalSeats.touched"
               class="text-danger"
             >
-              Total seats is required and must be greater than or equal to 0
+              Total seats is required and must be within 1 and 9999
             </div>
           </div>
           <label for="image">Select image to upload:</label>
@@ -128,20 +139,24 @@
             </button>
           </div>
         </form>
-        <div
-          class="display: flex; justify-content: flex-end float-right"
-        ></div>
-        <div
-          class="display: flex; justify-content: flex-end float-right"
-        >
-          <button class="btn btn-primary me-2" routerLink="/auth/register">
-            Register as user
-          </button>
-          <button class="btn btn-primary me-2" routerLink="/auth/login">
-            Login
-          </button>
-        </div>
+
+       
+      
       </div>
+      <div
+      class="display: flex; justify-content: flex-end float-right"
+    >
+      <button
+        class="btn btn-primary me-2"
+        routerLink="/auth/register"
+      >
+        Register as user
+      </button>
+      <button class="btn btn-primary me-2" routerLink="/auth/login">
+        Login
+      </button>
     </div>
-  </div>
+      </div>  
+    </div>  
+    
   
