--- a/client/src/app/theatre-page/plays/plays.component.html
+++ b/client/src/app/theatre-page/plays/plays.component.html
@@ -16,7 +16,7 @@
           <img [src]="getImageUrl(item)" class="card-img card-img-top image-scale img-card" alt="...">
         </div>
         <div class="card-body">
-          <h2 class="card-title">{{ item.name }}</h2>
+          <h2 class="card-title text-center">{{ item.name }}</h2>
           <p class="card-text">Type: <strong>{{ item.type.name }}</strong></p>
           <button class="btn btn-danger float-right" (click)="deletePlay(item.id)">Delete</button>
           <button class="btn btn-primary float-right" (click)="openEditForm(item)">Edit</button>
