--- a/client/src/app/theatre-page/add-play/add-play.component.html
+++ b/client/src/app/theatre-page/add-play/add-play.component.html
@@ -32,6 +32,7 @@
               class="form-control"
               formControlName="description"
               placeholder="Description"
+              maxlength="1500"
               [ngStyle]="{'height': (registerForm.controls['description'].value.length * 0.6) + 'px'}"
               style="max-height:300px"
             ></textarea>
