added reservation pages on client and theatre side

--- a/client/src/app/theatre-page/theatre-navbar/theatre-navbar.component.html
+++ b/client/src/app/theatre-page/theatre-navbar/theatre-navbar.component.html
@@ -8,6 +8,9 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/theatre/schedule">Schedule</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/theatre/reservations">Reservation</a>
+        </li>
        </ul>
       <button
         class="navbar-toggler"
