--- a/client/src/app/client-page/client-event/client-event.component.html
+++ b/client/src/app/client-page/client-event/client-event.component.html
@@ -1,5 +1,5 @@
 <mat-dialog-content>
-<div class="card h-100 container event-container">
+<div class="card h-100 container ">
     
     <h1 class="card-title text-center">{{ currentEvent.play.name }}</h1>
     <div class="card-img-wrapper d-flex justify-content-center align-items-center">
