--- a/client/src/app/client-page/client-theatres/client-theatres.component.html
+++ b/client/src/app/client-page/client-theatres/client-theatres.component.html
@@ -1,26 +1,32 @@
+<div style="background-color: darkgray;">
 <app-client-navbar></app-client-navbar>
 <div class="container main-container">
   <div class="row" *ngIf="theatreClicked == false">
-    <div class="text-center">
-      <h3>We found {{theatres.length}} results based on your search</h3>
-    </div>
+    <!-- <div class="text-center">
+      <h3>We have {{theatres.length}} theatres available</h3>
+    </div> -->
     <div class="col-sm-4 mb-5" *ngFor="let item of theatres| paginate :{
       itemsPerPage:tableSize,
       currentPage:page,
       totalItems:count
     }; let i = index">
       <div class="card h-100" style="background-color: bisque;" (click)="onCardClick(item)">
+        <div class="row no-glutters">
+          <div class="col-md-6">
         <div class="card-img-wrapper d-flex justify-content-center align-items-center">
           <img [src]="getImageUrl(item.image)" class="card-img card-img-top image-scale img-card" alt="...">
         </div>
-        <div class="card-body">
-          <h2 class="card-title">{{ item.user.username }}</h2>
+      </div>
+        <div class="card-body col-md-6">
+          <strong>
+          <h1 class="card-title d-flex justify-content-center">{{ item.user.username }}</h1>
+        </strong>
           <p class="card-text">
-            Address:
-            <strong
-              >{{ item.address.city }} {{ item.address.street }}
-              {{ item.address.number }}</strong
-            >
+            
+
+              {{ item.address.city }}, {{ item.address.street }}
+              {{ item.address.number }}
+            
           </p>
           <p class="card-text">
             Total seats: <strong>{{ item.totalSeats }}</strong>
@@ -28,6 +34,7 @@
         </div>
       </div>
     </div>
+  </div>
     <div class="d-flex justify-content-center">
       <pagination-controls
         previousLabel="Prev"
@@ -92,4 +99,5 @@
     </div>
   </div>
   
+</div>
 </div>
