--- a/client/src/app/client-page/client-theatres/client-theatres.component.scss
+++ b/client/src/app/client-page/client-theatres/client-theatres.component.scss
@@ -3,9 +3,11 @@
     max-width:100%;
     height: 200px;
     object-fit:fill;
+    
 
  }
 
- .main-container{
+ .container{
    margin-top: 3em;
+   cursor: pointer;
  }
