--- a/client/src/app/theatre-page/reservations/reservations.component.html
+++ b/client/src/app/theatre-page/reservations/reservations.component.html
@@ -1,4 +1,4 @@
-<app-client-navbar></app-client-navbar>
+<app-theatre-navbar></app-theatre-navbar>
 
   
   <div class="main-body">
@@ -19,6 +19,10 @@
           <th mat-header-cell *matHeaderCellDef mat-sort-header> Reservation date </th>
           <td mat-cell *matCellDef="let row"> {{row.dateTime| date:'MMM d, HH:mm' }} </td>
         </ng-container>
+        <ng-container matColumnDef="userEmail">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>User email </th>
+            <td mat-cell *matCellDef="let row"> {{row.user.email }} </td>
+          </ng-container>
         <ng-container matColumnDef="numberOfTickets">
           <th mat-header-cell *matHeaderCellDef mat-sort-header> Number of tickets </th>
           <td mat-cell *matCellDef="let row"> {{row.numberOfTickets}} </td>
