--- a/client/src/app/theatre-page/schedule/schedule.component.html
+++ b/client/src/app/theatre-page/schedule/schedule.component.html
@@ -26,7 +26,7 @@
   
       <ng-container matColumnDef="datetime">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Datetime </th>
-        <td mat-cell *matCellDef="let row"> {{row.datetime|date}} </td>
+        <td mat-cell *matCellDef="let row"> {{row.datetime| date:'MMM d, HH:mm'}} </td>
       </ng-container>
       <ng-container matColumnDef="price">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Price </th>
