--- a/client/src/app/theatre-page/add-edit-play/add-edit-play.component.html
+++ b/client/src/app/theatre-page/add-edit-play/add-edit-play.component.html
@@ -1,4 +1,4 @@
-
+<mat-dialog-content>
 <div class="container full-height main-div">
 <div class="row justify-content-center align-items-center">
     <div>
@@ -98,3 +98,4 @@
     </div>
   </div>
 </div>
+</mat-dialog-content>
