--- a/client/src/app/theatre-page/add-edit-play/add-edit-play.component.scss
+++ b/client/src/app/theatre-page/add-edit-play/add-edit-play.component.scss
@@ -17,3 +17,8 @@
     object-fit:fill;
     margin-top: 10px;
 }
+
+.mat-dialog-content {
+    display: block;
+    overflow-x: hidden !important;
+  }
