--- a/client/src/app/theatre-page/schedule/schedule.component.html
+++ b/client/src/app/theatre-page/schedule/schedule.component.html
@@ -1,7 +1,7 @@
 <div #topOfPage></div>
 <app-theatre-navbar></app-theatre-navbar>
 <div class="d-flex justify-content-center align-items-center add-event">
-  <button mat raised-button class="btn btn-primary" (click)="openAddEditEventForm()">Add play</button>
+  <button mat raised-button class="btn btn-primary" (click)="openAddEditEventForm()">Add event</button>
 </div>
 
 <div class="main-body">
