--- a/client/src/app/theatre-page/plays/plays.component.html
+++ b/client/src/app/theatre-page/plays/plays.component.html
@@ -18,8 +18,10 @@
         <div class="card-body">
           <h2 class="card-title text-center">{{ item.name }}</h2>
           <p class="card-text">Type: <strong>{{ item.type.name }}</strong></p>
-          <button class="btn btn-danger float-right" (click)="deletePlay(item.id)">Delete</button>
-          <button class="btn btn-primary float-right" (click)="openEditForm(item)">Edit</button>
+          <div class="d-flex justify-content-center">
+          <button class="btn btn-danger" (click)="deletePlay(item.id)">Delete</button>
+          <button class="btn btn-primary" (click)="openEditForm(item)">Edit</button>
+        </div>
         </div>
       </div>
     </div>
