added theatre account page and password change, added name for theatre

--- a/client/src/app/client-page/change-password/change-password.component.html
+++ b/client/src/app/client-page/change-password/change-password.component.html
@@ -57,7 +57,7 @@
                     type="submit"
                     [disabled]="registerForm.invalid"
                   >
-                    Register
+                    Change password
                   </button>
                   <button class="btn btn-danger" type="button" (click)="cancel()">
                     Cancel
