--- a/client/src/app/admin-page/theatre-register-forms/theatre-register-forms.component.html
+++ b/client/src/app/admin-page/theatre-register-forms/theatre-register-forms.component.html
@@ -1,6 +1,10 @@
 <div class="container border border-2 border-secondary rounded p-3">
     <div class="row">
       <div class="col">
+        <span class="fw-bold">Name: </span>
+        <p class="username">{{ registerForm.name }}</p>
+      </div>
+      <div class="col">
         <span class="fw-bold">Username: </span>
         <p class="username">{{ registerForm.username }}</p>
       </div>
