--- a/client/src/app/client-page/client-theatres/client-theatres.component.html
+++ b/client/src/app/client-page/client-theatres/client-theatres.component.html
@@ -19,7 +19,7 @@
       </div>
         <div class="card-body col-md-6">
           <strong>
-          <h1 class="card-title d-flex justify-content-center">{{ item.user.username }}</h1>
+          <h1 class="card-title d-flex justify-content-center">{{ item.name }}</h1>
         </strong>
           <p class="card-text">
             
@@ -45,13 +45,7 @@
     </div>
   </div>
 
-
-  
-
-  <div class="container" *ngIf="theatreClicked == true">
-    <div class="text-center">
-    </div>
-
+  <div class="container main-container" *ngIf="theatreClicked == true">
     <div class="row">
       <div class="col-sm-4 mb-5" *ngFor="let item of currentEvents 
       | paginate :{
@@ -59,13 +53,12 @@
         currentPage:page,
         totalItems:count
       }; let i = index">
-        <div class="card h-100" style="background-color: bisque;">
-          <h2 class="card-title text-center">{{ item.play.name }}</h2>
+        <div class="card h-100" style="background-color: bisque;cursor:pointer" (click)="onCardEventClick(item)">
           <div class="card-img-wrapper d-flex justify-content-center align-items-center">
             <img [src]="getImageUrl(item.play.image)" class="card-img card-img-top image-scale img-card" alt="...">
           </div>
           <div class="card-body">
-            
+            <h1 class="card-title text-center">{{ item.play.name }}</h1>
             <p class="card-text">
               <fa-icon [icon]="faCalendar" style="margin-right:0.5em;"></fa-icon><strong>{{ getDate(item.datetime) }} 
                 <strong>{{ getTime(item.datetime) }}</strong></strong>
@@ -79,16 +72,11 @@
             
             <p class="card-text">
               Price: <strong>{{ item.price }}</strong> $
-            </p>
-            <button class="btn btn-secondary" *ngIf="isLoggedIn$ | async">Buy ticket</button>
-            <button class="btn btn-danger" *ngIf="!(isLoggedIn$ | async)" disabled >Login for buying tickets
-            </button>
+            </p>          
           </div>
         </div>
       </div>
     </div>
-
-
     <div class="d-flex justify-content-center">
       <pagination-controls
         previousLabel="Prev"
@@ -98,6 +86,9 @@
       </pagination-controls>
     </div>
   </div>
+  </div>
+
   
-</div>
+
+  
 </div>
