--- a/client/src/app/theatre-page/theatre-navbar/theatre-navbar.component.html
+++ b/client/src/app/theatre-page/theatre-navbar/theatre-navbar.component.html
@@ -21,8 +21,18 @@
        </ul>
       <div>
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item" *ngIf="isLoggedIn$ | async">
-            <a class="nav-link" (click)="logout()">Logout</a>
+          <li class="nav-item" *ngIf="isLoggedIn$ | async" style="cursor:pointer">
+            <a class="nav-link" mat-icon-button [matMenuTriggerFor]="userMenu">
+              <mat-icon>person</mat-icon>
+            </a>
+          
+            <mat-menu #userMenu="matMenu" class="bg-dark">
+              <button mat-menu-item onclick="window.location.href = '/theatre/account'" class="nav-dropdown-button">Account</button>
+              <button mat-menu-item (click)="logout()" class="nav-dropdown-button">Logout</button>
+            </mat-menu>
+          </li>
+          <li class="nav-item" *ngIf="!(isLoggedIn$ | async)">
+            <a class="nav-link" href="auth/Login">Login</a>
           </li>
         </ul>
       </div>
